src/test/run-pass/variant-structs-trivial.rs
enum Foo {
    Bar { x: int },
    Baz { y: int }
}

fn main() { }
