src/test/compile-fail/do-lambda-requires-braces.rs
fn main() {
    do something
        |x| do somethingelse //! ERROR: expecting '{' but found 'do'
        |y| say(x, y)
}
